2006-03-27  Adam Jocksch  <ajocksch@redhat.com>

	* sourceBuffer.java (init): Added tags for macro highlighting and
	attaches a TagListener to the macro sytnax highlighting preference.
	(createTags): Creates macro tags.
	* cparser/CDTParser.java 
	(ParserCallBack.acceptMacro): Added method body.
	* prefs/SyntaxPreferenceGroup.java (NAMESPACE): Added.
	* testfiles/test6.cpp (THIS_IS_A_MACRO): Added.

	* SourceBuffer.java (init): Added tags for namespace and include
	statement syntax highlighting, adds listeners for these tags to the
	associated preferences.
	(createTags): Creates tags for namespace and include statement syntax
	highlighting.
	* cparser/CDTParser.java
	(ParserCallBack.enterNamespaceDefinition): Added method body.
	(ParserCallBack.acceptNamespaceReference): Ditto.
	(ParserCallBack.acceptUsingDirective): Ditto.
	(ParserCallBack.acceptUsingDeclaration): Ditto.
	(ParserCallBack.enterInclusion): Ditto.
	* prefs/SyntaxPreferenceGroup.java (NAMESPACE): Added.
	(INCLUDES): Ditto.
	* testfiles/test6.cpp: Updated to reflect a more complicated code
	example.

2006-03-24  Adam Jocksch  <ajocksch@redhat.com>

	* SourceWindow.java (SourceWindow): Now creates a VariableWatchView
	as well as initializing the stack browser before initializing events.
	(addVariableTrace): Now delegates work to VariableWatchView.
	(populateStackBrowser): Now creats a CurrentStackView.
	(addEvents): Adds listener to the CurrentStackView.
	(updateShownStackFrame): Now gets stackLevel direct from event.
	(SourceWinListener): Now implements StackViewListener.
	(SourceWinListener.currentStackChanged): Added.
	(SourceWinListener.selectionChangedEvent): Removed.
	* VariableWatchView.java: Added.
	* CurrentStackView.java: Added.

2006-03-19  Andrew Cagney  <cagney@redhat.com>

	* SourceWindow.java (setMyTask): Do not append Task.getStateString
	to the name; value should have been private to Task.

2006-03-17  Adam Jocksch  <ajocksch@redhat.com>
